fix: remove default button marign on safari

--- a/Main/styles/common/_tweet-dialog.scss
+++ b/Main/styles/common/_tweet-dialog.scss
@@ -89,6 +89,7 @@
             }
 
             button {
+                margin: 0px;
                 padding: 15px 0px;
 
                 border: 0px;
